add pagination for user api in the dashboard
